# gooroom-notice-indicator-application

./: Makefile.am  configure.ac.in
debian/: changelog  control  copyright  rules
icons/: Makefile.am
icons/22x22/status/: Makefile.am
icons/scalable/apps/: Makefile.am
po/: POTFILES.in  en_US.po  ko.po
src/: Makefile.am  gooroom-notice-applet.c  gooroom-notice-applet.h
